k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server-service
  namespace: default
  annotations:
    prometheus.io/scrape: "true"         
    prometheus.io/path: "/metrics"       
    prometheus.io/port: "8080"           
  labels:
    app: websocket-server
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http-ws
  selector:
    app: websocket-server
